# echoac-edr-poc

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/driver/: mod.rs
src/driver/edrs/: mod.rs
src/etw_threat_intel/: mod.rs
src/kernel_notify_routine_patching/: mod.rs
src/offsets/: mod.rs
src/utilities/: mod.rs
