[package]
name = "echoh-no"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
ntapi = "0.4.1"

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
]